# fileCioConverter

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: convertCIO.cpp  convertCIO.py
